Mute "Failed to handle source headers" runtime warning
evolution-3.28.5-1.fc28.x86_64
.
I was in a custom GMail subfolder called "Sent". I sent an email, which then was about to be stored in that very folder.
Thread 4026 "pool" hit Breakpoint 1, g_logv (log_domain=0x7fffc8f4fcc5 "e-mail-engine", log_level=G_LOG_LEVEL_WARNING, format=0x7fffc8f544a0 "%s: Failed to handle source headers: %s",
args=args@entry=0x7fff30efb6c0) at gmessages.c:1277
#0 0x00007ffff5c13950 in g_logv (log_domain=0x7fffc8f4fcc5 "e-mail-engine", log_level=G_LOG_LEVEL_WARNING, format=0x7fffc8f544a0 "%s: Failed to handle source headers: %s", args=args@entry=0x7fff30efb6c0)
at gmessages.c:1277
was_fatal = <optimized out>
was_recursion = <optimized out>
msg = <optimized out>
msg_alloc = <optimized out>
i = <optimized out>
#1 0x00007ffff5c13d63 in g_log (log_domain=log_domain@entry=0x7fffc8f4fcc5 "e-mail-engine", log_level=log_level@entry=G_LOG_LEVEL_WARNING, format=format@entry=0x7fffc8f544a0 "%s: Failed to handle source headers: %s") at gmessages.c:1432
args = {{gp_offset = 24, fp_offset = 48, overflow_arg_area = 0x7fff30efb7a0, reg_save_area = 0x7fff30efb6e0}}
#2 0x00007fffc8f4c28d in mail_send_message (error=0x7fff30efb878, cancellable=0x55555859b460 [CamelOperation], driver=0x555556f78a30 [CamelFilterDriver], uid=0x7fff88246ae0 "1538636675.2587_3170.ac", queue=0x5555557f7c50 [CamelMaildirFolder], m=0x555558c59b00) at /usr/src/debug/evolution-3.28.5-1.fc28.x86_64/src/libemail-engine/mail-ops.c:850
service = <optimized out>
err = 0x555557c46980
i = <optimized out>
jj = <optimized out>
sent_message_saved = 0
iaddr = <optimized out>
provider = <optimized out>
resent_from = <optimized out>
did_connect = 1
from = 0x555557a7c1b0 [CamelInternetAddress]
info = 0x7ffef8002430 [CamelMessageInfoBase]
folder = 0x7fffa5c227b0 [CamelIMAPXFolder]
message = 0x7fffa400c8e0 [CamelMimeMessage]
xev_headers = 0x55555823c630
local_error = 0x7fff1d0bf2b0
__func__ = "mail_send_message"
pc = <optimized out>
sent_folder = 0x5555557f7d60 [CamelMaildirFolder]
uids = 0x7ffefcccf560
i = 0
j = 0
delay_send = <optimized out>
local_error = 0x0
#3 0x00007fffc8f4c28d in send_queue_exec (m=0x555558c59b00, cancellable=0x55555859b460 [CamelOperation], error=<optimized out>)
at /usr/src/debug/evolution-3.28.5-1.fc28.x86_64/src/libemail-engine/mail-ops.c:1002
pc = <optimized out>
sent_folder = 0x5555557f7d60 [CamelMaildirFolder]
uids = 0x7ffefcccf560
i = 0
j = 0
delay_send = <optimized out>
local_error = 0x0
#4 0x00007fffc8f498bb in mail_msg_proxy (msg=0x555558c59b00) at /usr/src/debug/evolution-3.28.5-1.fc28.x86_64/src/libemail-engine/mail-mt.c:381
cancellable = 0x55555859b460 [CamelOperation]
[...]
(gdb) c
Continuing.
[Thread 0x7fff31efe700 (LWP 8773) exited]
(evolution:2587): e-mail-engine-WARNING **: 09:11:22.771: mail_send_message: Failed to handle source headers: Cannot get message with message ID 1631062: No such message available.
Edited by Milan Crha