I#164 - Mute "Failed to handle source headers" runtime warning

Closes https://gitlab.gnome.org/GNOME/evolution/issues/164